syntax = "proto3";

package calculator;

option go_package = "github.com/IndominusByte/go-grpc/calculator/proto";

message AvgRequest {
  int64 number = 1;
}

message AvgResponse {
  double result = 1;
}
