syntax = "proto3";

package calculator;

option go_package = "github.com/IndominusByte/go-grpc/calculator/proto";

message MaxRequest {
  int64 number = 1;
}

message MaxResponse {
  int64 result = 1;
}
