syntax = "proto3";

package calculator;

option go_package = "github.com/IndominusByte/go-grpc/calculator/proto";

message CalculatorRequest {
  int64 num_1 = 1;
  int64 num_2 = 2;
}

message CalculatorResponse {
  int64 result = 1;
}

